@startuml

hide empty members

class PlanView {}

class PlanViewModel {
    + fetchPlanAndListen()
    + detachListener()
    + update(plan: Plan?, errorMessage: String)
}

interface PlanEventDelegate {
    + update(plan: Plan?, errorMessage: String)
}

interface FirebaseEventDelegate {
    + update(item: FirebaseAdaptedData?, errorMessage: String) async
}

class FirebasePlanService {
    + fetchPlanAndListen(withPlanId planId: String)
    + detachListener()
    + update(item: FirebaseAdaptedData?, errorMessage: String)
}

class FirebaseRepository {}

PlanView --> PlanViewModel

PlanViewModel --|> PlanEventDelegate

FirebasePlanService --|> FirebaseEventDelegate

PlanViewModel --> FirebasePlanService

PlanEventDelegate <.right. FirebasePlanService

FirebasePlanService --> FirebaseRepository

FirebaseEventDelegate <.right. FirebaseRepository

@enduml
